--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "expo": "~53.0.17",
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
