--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "react": "19.0.0",
     "react-native": "0.79.5"
   },
