--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "security-check": "node scripts/pre-commit-check.js",
+    "pre-commit": "npm run security-check"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -20,7 +22,8 @@
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
