--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
     "pre-commit": "npm run security-check"
   },
   "dependencies": {
+    "@expo/image-utils": "^0.8.7",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.4.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-firebase/analytics": "^22.4.0",
+    "@react-native-firebase/app": "^22.4.0",
     "dotenv": "^17.2.1",
-    "expo": "~53.0.17",
+    "expo": "~53.0.23",
+    "expo-dev-client": "~5.2.4",
+    "expo-font": "~13.3.2",
     "expo-linear-gradient": "^14.1.5",
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
     "firebase-admin": "^13.4.0",
     "react": "19.0.0",
-    "react-native": "0.79.5",
-    "expo-dev-client": "~5.2.4"
+    "react-native": "0.79.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
