--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Expo
 .expo/
 dist/
 web-build/
-expo-env.d.ts
 
 # Native
-.kotlin/
 *.orig.*
 *.jks
 *.p8
@@ -21,7 +20,7 @@ expo-env.d.ts
 # Metro
 .metro-health-check*
 
-# debug
+# Debug
 npm-debug.*
 yarn-debug.*
 yarn-error.*
@@ -32,31 +31,9 @@ yarn-error.*
 
 # local env files
 .env*.local
-.env
-app.config.js
 
 # typescript
 *.tsbuildinfo
-
-# 🔒 SECURITY: API Keys and Sensitive Files
-app.config.js
-scripts/serviceAccountKey.json
-.env
-.env.local
-.env.production
-.env.development
-
-# Firebase
-firebase-debug.log
-firebase-debug.*.log
-.firebase/
-
-# Build artifacts
-build/
-dist/
-*.apk
-*.aab
-*.ipa
 
 # IDE
 .vscode/
@@ -64,7 +41,82 @@ dist/
 *.swp
 *.swo
 
-# OS
+# OS generated files
 Thumbs.db
-ehthumbs.db
-Desktop.ini
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
+
+# Temporary folders
+tmp/
+temp/
+
+# Build outputs
+build/
+android/app/build/
+ios/build/
+
+# EAS
+.easignore
+
+# Local development
+.expo-shared/
